--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>RKInnovate</title>
+  <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
+  <style>
+    body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      width: 100vw;
+    }
+
+    .coming-soon {
+      width: 50vw;
+      height: 50vh;
+      position: absolute;
+    }
+  </style>
+</head>
+
+<body style="background-color: #181f29;">
+
+  <dotlottie-player src="/assets/coming_soon.json" background="transparent" speed="1" class="coming-soon" loop
+    autoplay></dotlottie-player>
+</body>
+
 </html>
