--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
       align-items: center;
       justify-content: center;
       height: 100vh;
-      width: 100vw;
+      overflow-y: hidden;
     }
 
     .coming-soon {
       width: 50vw;
       height: 50vh;
-      position: absolute;
     }
   </style>
 </head>
