Added SOE key words and fav icon

--- a/index.html
+++ b/index.html
@@ -5,20 +5,50 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RKInnovate</title>
+
+  <!-- Favicon for all browsers and platforms -->
+  <link rel="icon" href="/assets/logo.jpeg" type="image/jpeg">
+  <link rel="apple-touch-icon" href="/assets/logo.jpeg">
+  <link rel="manifest" href="/manifest.json">
+
+  <!-- Meta tags for SEO and social sharing -->
+  <meta name="description"
+    content="RK Innovate revolutionizes business operations with innovative software solutions. Specializing in custom software, mobile, and web development, we drive your digital transformation.">
+  <meta name="keywords"
+    content="RK Innovate, software development, custom software, mobile apps, web development, IT solutions, technology innovation">
+  <meta name="author" content="RK Innovate">
+
+  <!-- Open Graph for social sharing -->
+  <meta property="og:title" content="RK Innovate - Software Solutions">
+  <meta property="og:description"
+    content="Transform your business with our custom software, mobile, and web development services.">
+  <meta property="og:image" content="/assets/logo.jpeg">
+  <meta property="og:url" content="https://www.rkinnovate.com">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card for sharing -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="RK Innovate - Software Solutions">
+  <meta name="twitter:description"
+    content="Innovative software solutions for businesses, custom mobile and web development services.">
+  <meta name="twitter:image" content="/assets/logo.jpeg">
+
+  <!-- Script for .lottie animations -->
   <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
+
+  <!-- Styles -->
   <style>
     body {
       display: flex;
       align-items: center;
       justify-content: center;
       height: 100vh;
-      width: 100vw;
+      overflow-y: hidden;
     }
 
     .coming-soon {
       width: 50vw;
       height: 50vh;
-      position: absolute;
     }
   </style>
 </head>
