Added alternate icon and title

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RKInnovate</title>
+  <meta name="apple-mobile-web-app-title" content="RKInnovate">
 
   <!-- Favicon for all browsers and platforms -->
-  <link rel="icon" href="/assets/logo.jpeg" type="image/jpeg">
+  <link rel="alternate icon" href="/assets/logo.jpeg" type="image/x-icon">
+  <link rel="icon" href="/assets/logo.jpeg?v1.0" type="image/jpeg">
   <link rel="apple-touch-icon" href="/assets/logo.jpeg">
+  <link rel="apple-touch-icon" href="/assets/logo.png" sizes="32x32" type="image/png">
+  <link rel="apple-touch-icon" href="/assets/logo.png" sizes="192x192" type="image/png">
   <link rel="manifest" href="/manifest.json">
 
   <!-- Meta tags for SEO and social sharing -->
